# msdfgen-wasm

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  epic.md  feature-request.md  task.md
.github/workflows/: main.yaml  release.yaml
freetype2/: .gitignore  CMakeLists.txt
freetype2/builds/: exports.mk
freetype2/builds/unix/: ftsystem.c
msdfgen/: CMakeLists.txt  main.cpp
msdfgen/ext/: import-font.cpp  import-font.h
msdfgen/wasm/: msdfgen_c.cpp  msdfgen_c.h  post.js  pre.js
